# libsignon-glib

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.am.coverage  NEWS  README  README.md  autogen.sh  configure.ac  libsignon-glib.pc.in
debian/: changelog  control  libsignon-glib-dev.install  rules
docs/reference/: Makefile.am  libsignon-glib-docs.sgml  libsignon-glib-docs.xml  libsignon-glib-sections.txt
libsignon-glib/: .gitignore  Makefile.am  signon-auth-service.c  signon-auth-service.h  signon-auth-session.c  signon-auth-session.h  signon-dbus-queue.c  signon-dbus-queue.h  signon-errors.c  signon-errors.h  signon-glib.h  signon-identity-info.c  signon-identity-info.h  signon-identity.c  signon-identity.h  signon-internals.h  signon-marshal.list  signon-proxy.c  signon-proxy.h  signon-types.h  signon-utils.c  signon-utils.h  signon.vapi  signonauthsession.xml  signondaemon.xml  signonidentity.xml  sso-auth-service.c  sso-auth-service.h
m4/: gcov.m4
pygobject/: Signon.py
tests/: .gitignore  Makefile.am  check_signon.c  signon-glib-test-wrapper.sh  signon-glib-test.sh  signon-glib-test.sh.in  tests.xml
